--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,11 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 
+.app{
+    height: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
